--- a/index.html
+++ b/index.html
@@ -8,15 +8,73 @@
 
  <html>
      <head>
-         <meta>
-         <meta>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width , initial-scale=1.0">
 
-         <title>
+        <title>
+            NIXIA POS
+        </title>
 
-         </title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
      </head>
      <body>
-         
+
+        <!-- BARRE DE NAVIGATION GAUCHE -->
+        <div class="container">
+            <div class="nav">
+
+                <!-- LISTE BARRE DE NAVIGATION -->
+                <ul>
+                <!-- LOGO DE L'ENTREPRISE -->
+                    <li>
+                    <a href="#">
+                        <span class="icon"><img class= "logo" src="assets/img/logo2.png" alt="Nixia logo"></span>
+                        <span class="title"></span>
+                    </a>
+                    </li>
+
+                    <!-- BOUTON POUR ACCEDER AU TABLEAU DE BORD -->
+                    <li class="hovered">
+                    <a href="#">
+                        <span class="icon"><ion-icon name="pie-chart-outline"></ion-icon></span>
+                        <span class="title">Tableau de bord</span>
+                    </a>
+                    </li>
+
+                    <!-- BOUTON POUR ACCEDER A LA SECTION CLIENTS -->
+                    <li>
+                    <a href="#">
+                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
+                        <span class="title">Clients</span>
+                    </a>
+                    </li>
+
+                    <!-- BOUTON POUR ACCEDER AUX PARAMETRES -->
+                    <li>
+                    <a href="#">
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="title">Paramètres</span>
+                    </a>
+                    </li>
+
+                    <!-- BOUTON POUR SE DECONNECTER -->
+                    <li>
+                    <a href="#">
+                        <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
+                        <span class="title">Se déconnecter</span>
+                    </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+
+
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+        <script src="assets/js/hover.js"></script>
      </body>
  </html>
 
