--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="cardBox">
                 <div class="card">
                     <div>
-                        <div class="card__data">50 000$</div>
+                        <div class="card__data">50 000€</div>
                         <div class="card__title">Chiffre d'affaire</div>
                     </div>
                     <div class="card__icon">
@@ -135,7 +135,53 @@
                     </div>
                 </div>
 
-                
+            </div>
+
+            <!-- LISTE ACHATS -->
+            <div class="liste">
+                <div class="achats">
+                    <div class="liste__title">
+                        <h2>Achats du jour</h2>
+                        <!-- <a href="#" class="buton">Voir</a> -->
+                    </div>
+
+                    <!-- TABLEAU ACHATS -->
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>Nom</td>
+                                <td>Prix</td>
+                                <td>Quantité</td>
+                                <!-- <td>Paiement</td> -->
+                                <td>Statut</td>
+                            </tr>
+                        </thead>
+                    
+                        <tbody>
+                            <tr>
+                                <td>Poulet</td>
+                                <td>5.99€</td>
+                                <td>1</td>
+                                <!-- <td>Payé</td> -->
+                                <td><span class="statut expedie">Expédiée</span></td>
+                            </tr>
+                            <tr>
+                                <td>Ananas</td>
+                                <td>10.99€</td>
+                                <td>1</td>
+                                <!-- <td>Payé</td> -->
+                                <td><span class="statut preparation">Préparation</span></td>
+                            </tr>
+                            <tr>
+                                <td>Pistache</td>
+                                <td>2.99€</td>
+                                <td>1</td>
+                                <!-- <td>Refusé</td> -->
+                                <td><span class="statut annule">Annulée</span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
